[gd_scene load_steps=23 format=3 uid="uid://okneuvhakltc"]

[ext_resource type="Script" path="res://script/bat.gd" id="1_6nrvb"]
[ext_resource type="Texture2D" uid="uid://cbfs788cshqh" path="res://art/7 Bat/EnemyDeathEffect.png" id="1_qb10f"]
[ext_resource type="Texture2D" uid="uid://b0wtlx537vlup" path="res://art/7 Bat/Bat.png" id="3_8chfe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5x28a"]
atlas = ExtResource("1_qb10f")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4suof"]
atlas = ExtResource("1_qb10f")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3bg3"]
atlas = ExtResource("1_qb10f")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye1j0"]
atlas = ExtResource("1_qb10f")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_haybo"]
atlas = ExtResource("1_qb10f")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e43qb"]
atlas = ExtResource("1_qb10f")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p26l"]
atlas = ExtResource("1_qb10f")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cunsp"]
atlas = ExtResource("1_qb10f")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbrd3"]
atlas = ExtResource("1_qb10f")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5msjx"]
atlas = ExtResource("1_qb10f")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cch3y"]
atlas = ExtResource("3_8chfe")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfihh"]
atlas = ExtResource("3_8chfe")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4whtt"]
atlas = ExtResource("3_8chfe")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw2hd"]
atlas = ExtResource("3_8chfe")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwv48"]
atlas = ExtResource("3_8chfe")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_flpbt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x28a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4suof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3bg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye1j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haybo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e43qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p26l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cunsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbrd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5msjx")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cch3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfihh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4whtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw2hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwv48")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_j8xml"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_65mxw"]
radius = 10.198

[sub_resource type="CircleShape2D" id="CircleShape2D_jloav"]
radius = 103.005

[node name="bat" type="CharacterBody2D"]
script = ExtResource("1_6nrvb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_flpbt")
animation = &"idle"
frame = 3
frame_progress = 0.564068

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_j8xml")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_65mxw")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_jloav")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
